--- a/blog/static/blog/blog.css
+++ b/blog/static/blog/blog.css
@@ -44,13 +44,15 @@ div.django-ckeditor-widget {
     width: 100%;
 }
 
-div.comment {
+
+div.reply {
+    margin-left: 2em;
+}
+
+div.reply:not(:last-child) {
     border-bottom: 1px dashed #ccc;
     margin-bottom: 0.5em;
     padding-bottom: 0.5em;
-}
-div.reply {
-    margin-left: 2em;
 }
 div#reply_content_container {
     border: 1px solid #d1d1d1;
